Issue #119: Add an overlay to the posters to allow for a watched status
* New layout for gallery and poster view to handle overlay watched indicator
* Add Watched Status to Grid View.
* Add watched indicator to TV Shows, Seasons, Episodes and Search.
* Clear image cache if this is the first time since running watched status

--- a/serenity-app/res/layout-large/activity_movie_browser_gridview.xml
+++ b/serenity-app/res/layout-large/activity_movie_browser_gridview.xml
@@ -114,6 +114,7 @@
         app:scrollDirectionPortrait="vertical"
         app:stretchMode="spacingWidthUniform"
         app:verticalSpacing="10dp"
+        android:focusable="true"
         android:nextFocusDown="@+id/movieGridView"
         android:nextFocusLeft="@+id/movieGridView"
         android:nextFocusRight="@+id/movieGridView" />
