Issue #121: Preference setting for Menu key behavior
* By default, Menu key brings up the Slide out menu
* If disabled, will bring up context menu if available.

This is user configurable, and is a work around for the longclick issue
that persists with Remote controls and android devices.

--- a/serenity-app/res/xml/preferences.xml
+++ b/serenity-app/res/xml/preferences.xml
@@ -111,5 +111,14 @@
             android:title="@string/force_mx_player_resume_position_" />
         
     </PreferenceCategory>
+    
+    <PreferenceCategory android:title="Remote Control" >
+        <CheckBoxPreference
+            android:key="remote_control_menu"
+            android:summary="When enabled the menu key will bring up the slide out menu, otherwise it will activate the context menu for an item if available."
+            android:title="Enable Sliding Menu"
+            android:defaultValue="true" />
+        
+    </PreferenceCategory>
 
 </PreferenceScreen>
