Issue #139: Make grid views clickable

--- a/serenity-app/res/layout-large/activity_tvbrowser_show_seasons.xml
+++ b/serenity-app/res/layout-large/activity_tvbrowser_show_seasons.xml
@@ -59,6 +59,7 @@
         app:stretchMode="spacingWidthUniform"
         app:verticalSpacing="10dp"
         android:focusable="true"
+        android:visibility="gone"
         android:nextFocusDown="@+id/tvShowSeasonImageGalleryLayout"
         android:nextFocusLeft="@+id/tvShowSeasonImageGalleryLayout"
         android:nextFocusRight="@+id/tvShowSeasonImageGalleryLayout" />
