--- a/serenity-app/res/layout-large/activity_tvbrowser_show_gridview_posters.xml
+++ b/serenity-app/res/layout-large/activity_tvbrowser_show_gridview_posters.xml
@@ -57,6 +57,16 @@
             android:prompt="@string/movie_category_prompt2"
             android:spinnerMode="dropdown"
             android:visibility="invisible" />
+        
+        <TextView android:id="@+id/tvShowGridTitle"
+            style="@android:style/TextAppearance.Holo.Medium"
+            android:textStyle="bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            />
+        
 
         <TextView
             android:id="@+id/tvShowItemCount"
