--- a/serenity-app/res/layout-large/poster_indicator_view.xml
+++ b/serenity-app/res/layout-large/poster_indicator_view.xml
@@ -48,21 +48,20 @@
 
     <ProgressBar
         android:id="@+id/posterInprogressIndicator"
-        android:layout_width="75dp"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginBottom="-15dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginTop="-15dp"
-        android:background="#30000000"
+        android:layout_marginBottom="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:paddingTop="0dp"
+        android:background="#A0000000"
         android:clickable="false"
         android:indeterminate="false"
         android:indeterminateOnly="false"
         android:max="100"
+        style="@android:style/Widget.ProgressBar.Horizontal"
         android:progressDrawable="@drawable/scrubber_progress_holo"
-        android:thumb="@android:color/transparent"
         android:visibility="invisible" />
 
 </RelativeLayout>
