Refactor the display of the images
* Remove unneeded custom image views.
* Reduce memory foot print by not passing around the video info in the view
* Update code to always get video information from adaptor.

--- a/serenity-app/res/layout-large/poster_indicator_view.xml
+++ b/serenity-app/res/layout-large/poster_indicator_view.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:background="@drawable/gallery_item_background" >
 
-    <us.nineworlds.serenity.ui.views.SerenityPosterImageView
+    <ImageView
         android:id="@+id/posterImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
