Refactor External Player support.
This change refactors the external player support.  This provides some meta
data around the supported external players and their functionality.  In
addition users can specifically select the external player from the list
of supported players.  The System Default player can be used as well.

--- a/serenity-app/res/xml/preferences.xml
+++ b/serenity-app/res/xml/preferences.xml
@@ -108,10 +108,15 @@
             android:key="external_player_continuous_playback"
             android:summary="Enables video queue support for external players. Experimental support for external players and the video queue and continuous playback support."
             android:title="Enable Video Queue for External Players" />
-        <CheckBoxPreference
-            android:key="mxplayer_plex_offset"
-            android:summary="@string/mx_player_resume_summary"
-            android:title="@string/force_mx_player_resume_position_" />
+        
+        <ListPreference
+            android:defaultValue="all"
+            android:entries="@array/externalPlayerListNames"
+            android:entryValues="@array/externalPlayerListValues"
+            android:key="serenity_external_player_filter"
+            android:summary="This selection allows the choosing of what external player will be used to play back video content. Not all players support all functionality.  MX Player and MX Player pro support the ability to update the Plex playback position.  The System Default will just launch what ever the system default player is, and has limited functionality.  If you need specific functionality make sure to select a particular player."
+            android:title="Prefered external player." />
+        
     </PreferenceCategory>
     <PreferenceCategory android:title="@string/preference_remote_control" >
         <CheckBoxPreference
