--- a/serenity-app/res/xml/preferences.xml
+++ b/serenity-app/res/xml/preferences.xml
@@ -29,8 +29,8 @@
             android:title="@string/select_the_starting_category_filter_" />
         <ListPreference
             android:defaultValue="all"
-            android:entries="@array/categoryListNames"
-            android:entryValues="@array/categoryListValues"
+            android:entries="@array/categoryListNamesSeries"
+            android:entryValues="@array/categoryListValuesSeries"
             android:key="serenity_series_category_filter"
             android:summary="@string/categories_series_summary_preference_description"
             android:title="@string/series_select_the_starting_category_filter_" />
